@@ -1,9 +1,14 @@
 package com.project.financeapi.service;
 
-import com.project.financeapi.dto.account.CreateAccountRequestDTO;
+import com.project.financeapi.dto.ResponseValidateDTO;
+import com.project.financeapi.dto.account.AccountResponseDTO;
+import com.project.financeapi.dto.account.create.*;
 import com.project.financeapi.dto.account.ResponseAccountDTO;
 import com.project.financeapi.dto.account.ResponseDeactivateAccountDTO;
 import com.project.financeapi.dto.account.UpdateAccountRequestDTO;
+import com.project.financeapi.dto.account.response.*;
+import com.project.financeapi.dto.account.response.CreateCheckingAccountResponseDTO;
+import com.project.financeapi.dto.account.update.*;
 import com.project.financeapi.dto.util.JwtPayload;
 import com.project.financeapi.entity.*;
 import com.project.financeapi.entity.account.*;
@@ -12,88 +17,199 @@ import com.project.financeapi.entity.base.AccountBase;
 import com.project.financeapi.exception.AccessBlockedException;
 import com.project.financeapi.exception.BusinessException;
 import com.project.financeapi.repository.AccountRepository;
+import com.project.financeapi.repository.BankRepository;
 import com.project.financeapi.repository.UserRepository;
 import com.project.financeapi.util.JwtUtil;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
 
 @Service
+@RequiredArgsConstructor
 public class AccountService {
 
     private final AccountRepository accountRepository;
     private final UserRepository userRepository;
     private final JwtUtil jwtUtil;
+    private final BankRepository bankRepository;
 
-    public AccountService(AccountRepository accountRepository,
-                          UserRepository userRepository,
-                          JwtUtil jwtUtil
-    ) {
-        this.accountRepository = accountRepository;
-        this.userRepository = userRepository;
-        this.jwtUtil = jwtUtil;
-    }
 
     @Transactional
-    public AccountBase create(String token, CreateAccountRequestDTO dto) {
+    public CreateCheckingAccountResponseDTO create(String token, CreateCheckingAccountRequestDTO dto) {
 
-        JwtPayload payload = jwtUtil.extractPayload(token);
+        ResponseValidateDTO validate = validate(token, dto.baseAccount().bankId());
 
-        User user = userRepository.findById(payload.id())
-                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
+        CheckingAccount account = new CheckingAccount(
+                validate.user(), dto.baseAccount().name(), dto.baseAccount().initialValue(),
+                validate.bank(), dto.overdraftLimit()
+        );
 
-        AccountBase account = null;
 
-        switch (dto.type()) {
-            case CHECKING -> account = new CheckingAccount(user, dto.initialValue());
-            case SAVINGS -> account = new SavingsAccount(user, dto.initialValue());
-            case PAYMENT -> account = new PaymentAccount(user, dto.initialValue());
-            case WALLET -> account = new WalletAccount(user, dto.initialValue());
-            case INVESTMENT -> account = new InvestmentAccount(user, dto.initialValue());
-        }
-
-        account.setName(dto.name());
-
-        return accountRepository.save(account);
+        return accountRepository.save(account).toDTO();
 
     }
 
     @Transactional
-    public AccountBase update(String token, UUID id, UpdateAccountRequestDTO dto) {
+    public CreateInvestmentAccountResponseDTO create(String token, CreateInvestmentAccountRequestDTO dto) {
 
-        JwtPayload userToken = jwtUtil.extractPayload(token);
+        ResponseValidateDTO validate = validate(token, dto.baseAccount().bankId());
 
-        userRepository.findById(userToken.id())
-                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
+        InvestmentAccount account = new InvestmentAccount(
+                validate.user(), dto.baseAccount().name(),
+                dto.baseAccount().initialValue(),
+                validate.bank(), dto.riskLevel()
+        );
 
-        AccountBase account = accountRepository.findById(id)
+
+        return accountRepository.save(account).toDTO();
+
+    }
+
+    @Transactional
+    public CreateSavingsAccountResponseDTO create(String token, CreateSavingsAccountRequestDTO dto) {
+
+        ResponseValidateDTO validate = validate(token, dto.baseAccount().bankId());
+
+        SavingsAccount account = new SavingsAccount(
+                validate.user(), dto.baseAccount().name(),
+                dto.baseAccount().initialValue(),
+                validate.bank(), dto.interestRate()
+        );
+
+        return accountRepository.save(account).toDTO();
+
+    }
+
+    @Transactional
+    public CreatePaymentAccountResponseDTO create(String token, CreatePaymentAccountRequestDTO dto) {
+
+        ResponseValidateDTO validate = validate(token, dto.baseAccount().bankId());
+
+        PaymentAccount account = new PaymentAccount(
+                validate.user(), dto.baseAccount().name(),
+                dto.baseAccount().initialValue(),
+                validate.bank(), dto.provider()
+        );
+
+
+        return accountRepository.save(account).toDTO();
+
+    }
+
+    @Transactional
+    public CreateWalletAccountResponseDTO create(String token, CreateWalletAccountRequestDTO dto) {
+
+        ResponseValidateDTO validate = validate(token, dto.baseAccount().bankId());
+
+        WalletAccount account = new WalletAccount(
+                validate.user(), dto.baseAccount().name(),
+                dto.baseAccount().initialValue(),
+                validate.bank()
+        );
+
+
+        return accountRepository.save(account).toDTO();
+
+    }
+  
+
+    @Transactional
+    public AccountResponseDTO update(String token, UUID id, UpdateCheckingAccountRequestDTO dto) {
+
+        ResponseValidateDTO validate = validate(token, dto.bankId());
+
+        AccountBase account = accountRepository.findByAccountHolderAndId(validate.user(), id)
                 .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Conta não encontrada"));
 
 
-        if (!account.getAccountHolder().getId().equals(userToken.id())) {
-            throw new BusinessException(HttpStatus.FORBIDDEN, "Você não tem permissão para editar esta conta");
+        if(validate.bank() != null){
+            account.setBank(validate.bank());
         }
 
-        if (dto.name() != null && !dto.name().isBlank()) {
-            account.setName(dto.name());
-        }
+        account.updateFrom(dto);
 
-        if (dto.type() != null) {
-            account.setType(dto.type());
-        }
-
-        if (dto.status() != null) {
-            account.setStatus(dto.status());
-        }
-
-        return accountRepository.save(account);
+        return accountRepository.save(account).toDTO();
     }
 
-    public List<ResponseAccountDTO> findAll(String token) {
+    @Transactional
+    public AccountResponseDTO update(String token, UUID id, UpdateInvestmentAccountRequestDTO dto) {
+
+        ResponseValidateDTO validate = validate(token, dto.bankId());
+
+        AccountBase account = accountRepository.findByAccountHolderAndId(validate.user(), id)
+                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Conta não encontrada"));
+
+
+        if(validate.bank() != null){
+            account.setBank(validate.bank());
+        }
+
+        account.updateFrom(dto);
+
+        return accountRepository.save(account).toDTO();
+    }
+
+    @Transactional
+    public AccountResponseDTO update(String token, UUID id, UpdatePaymentAccountRequestDTO dto) {
+
+        ResponseValidateDTO validate = validate(token, dto.bankId());
+
+        AccountBase account = accountRepository.findByAccountHolderAndId(validate.user(), id)
+                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Conta não encontrada"));
+
+
+        if(validate.bank() != null){
+            account.setBank(validate.bank());
+        }
+
+        account.updateFrom(dto);
+
+        return accountRepository.save(account).toDTO();
+    }
+
+    @Transactional
+    public AccountResponseDTO update(String token, UUID id, UpdateSavingsAccountRequestDTO dto) {
+
+        ResponseValidateDTO validate = validate(token, dto.bankId());
+
+        AccountBase account = accountRepository.findByAccountHolderAndId(validate.user(), id)
+                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Conta não encontrada"));
+
+
+        if(validate.bank() != null){
+            account.setBank(validate.bank());
+        }
+
+        account.updateFrom(dto);
+
+        return accountRepository.save(account).toDTO();
+    }
+
+    @Transactional
+    public AccountResponseDTO update(String token, UUID id, UpdateWalletAccountRequestDTO dto) {
+
+        ResponseValidateDTO validate = validate(token, dto.bankId());
+
+        AccountBase account = accountRepository.findByAccountHolderAndId(validate.user(), id)
+                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Conta não encontrada"));
+
+
+        if(validate.bank() != null){
+            throw new BusinessException(HttpStatus.UNAUTHORIZED, "Esse tipo de conta não aceita banco.");
+        }
+
+        account.updateFrom(dto);
+
+        return accountRepository.save(account).toDTO();
+    }
+
+    public List<AccountResponseDTO> findAll(String token) {
 
         JwtPayload userToken = jwtUtil.extractPayload(token);
 
@@ -102,18 +218,13 @@ public class AccountService {
 
         List<AccountBase> accounts = accountRepository.findByAccountHolder(user);
 
+
         return accounts.stream().filter(accountBase -> accountBase.getStatus() == AccountStatus.ACTIVE)
-                .map(account -> new ResponseAccountDTO(
-                account.getId(),
-                account.getName(),
-                account.getType(),
-                account.getBalance(),
-                account.getStatus()
-        )).collect(Collectors.toList());
+                .map(AccountBase::toDTO).toList();
 
     }
 
-    public ResponseAccountDTO findById(String token, UUID id) {
+    public AccountResponseDTO findById(String token, UUID id) {
 
         JwtPayload userToken = jwtUtil.extractPayload(token);
 
@@ -127,13 +238,7 @@ public class AccountService {
             throw new RuntimeException("Verifique o id informado, conta não localizada.");
         }
 
-        return new ResponseAccountDTO(
-                account.getId(),
-                account.getName(),
-                account.getType(),
-                account.getBalance(),
-                account.getStatus()
-        );
+        return account.toDTO();
     }
 
     public ResponseDeactivateAccountDTO deactivateAccount(String token, UUID id) {
@@ -157,6 +262,27 @@ public class AccountService {
         return new ResponseDeactivateAccountDTO(
                 account.getId().toString(),
                 "A conta " + account.getName() + " foi desativada com sucesso."
+        );
+    }
+
+
+    private ResponseValidateDTO validate(String token, UUID bankId) {
+
+        JwtPayload payload = jwtUtil.extractPayload(token);
+
+        User user = userRepository.findById(payload.id())
+                .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Usuário não encontrado"));
+
+        Bank bank = null;
+
+        if(bankId != null){
+            bank = bankRepository.findByCreatedByAndId(user, bankId)
+                    .orElseThrow(() -> new BusinessException(HttpStatus.NOT_FOUND, "Banco não encontrado"));
+        }
+
+        return new ResponseValidateDTO(
+                user,
+                bank
         );
     }
 
